# mvp-boilerlate-py

./: Dockerfile  pyproject.toml
src/my_boilerplate_project/entrypoint/api/: service.py
src/my_boilerplate_project/entrypoint/inference/: di.py  service.py
src/my_boilerplate_project/lib/flex_batcher/: __init__.py  abstract.py  batcher.py  batcher_async.py  batcher_sync_pool.py  config.py  configs.py  contracts.py  test_batcher_async.py
src/my_boilerplate_project/service/inference/: dummy_model.py
